# planeflight_io

./: LICENSE  README.md  campaign_utils.py  create_test_plane_nums.py  get_tracer_name_num_mapping.py  make_diagnostics_yml.py  obspack_example.py  obspack_io.py  plaflight_utils.py  planeflight_diagnostics.yml  planeflight_io.py  planeflight_utils.py  pyproject.toml  test_plane.py  testing.py
dev/: make_diagnostics_yml.py
examples/: Examples- Creating ObsPack Input Files.py  Examples- Creating PlaneFlight Input Files.ipynb  Examples- Creating PlaneFlight Input Files.py  Examples- Reading In Obspack Output Files.py  Examples- Reading In PlaneFlight Output Files.ipynb  Examples- Reading In PlaneFlight Output Files.py
examples/datafiles_for_examples/: geoschem_config.yml  input.geos.standard
examples/example1/: Planeflight.dat.20130603  Planeflight.dat.20130610
examples/example2/: Planeflight.dat.20130603  Planeflight.dat.20130610
examples/example3/: Planeflight.dat.20130603  Planeflight.dat.20130610
examples/example4/: Planeflight.dat.20130603  Planeflight.dat.20130610
examples/working_examples/: concat_shuying_planedat.py  joey_NACHTT_concat_plane.py  make_Kalamzoo_planedat_inputs.py  make_NACHTT_plane_dat.py  make_UWFPS_plane_dat.py  make_WINTER_planedat_inputs.py
old/: old_name_num_mapping.py
planeflight_io.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_plane_data/inputs_names/: Planeflight.dat.20170118
test_plane_data/inputs_nums/: Planeflight.dat.20170117
test_plane_data/outputs_names/: plane.log.20170116  plane.log.20170117  (+1 more)
(+13 files in other folders)
